cabal-version:      2.4
name:               demo
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         owen.harvey@data61.csiro.au
author:             Owen Harvey
category:           Web
extra-source-files: CHANGELOG.md

executable client
    main-is:          Main.hs
    hs-source-dirs:   client
    default-language: Haskell2010
    build-depends:
        base >=4.14.1.0 && <4.15,
        servant >=0.18.2 && <0.19,
        servant-client >=0.18.2 && <0.19,
        text >=1.2.4.1 && <1.3,
        mtl >=2.2.2 && <2.3,
        transformers >=0.5.6.2 && <0.6,
        http-client >=0.6.4.1 && <0.7

executable server
    main-is:          Main.hs
    hs-source-dirs:   server
    default-language: Haskell2010
    build-depends:
        base >=4.14.1.0 && <4.15,
        servant >=0.18.2 && <0.19,
        servant-server >=0.18.2 && <0.19,
        wai >=3.2.3 && <3.3,
        warp >=3.3.15 && <3.4,
        text >=1.2.4.1 && <1.3

executable swagger
    main-is:          Main.hs
    hs-source-dirs:   swagger
    default-language: Haskell2010
    build-depends:
        base >=4.14.1.0 && <4.15,
        servant >=0.18.2 && <0.19,
        servant-server >=0.18.2 && <0.19,
        servant-swagger >=1.1.10 && <1.2,
        aeson >=1.5.6.0 && <1.6,
        bytestring >=0.10.12.0 && <0.11
